# libnn

./: .gitmodules  CMakeLists.txt
exsample/: CMakeLists.txt  nn_ep_sample.c
include/: nn.h  nn_inode.h  nn_motor_data.h  nn_sensor_data.h
src/: nn.c  nn_inode.c
